<resources>
    <!-- Application name -->
    <string name="app_name">Real Estate Manager</string>

    <!-- Main menu strings -->
    <string name="search_button">Find a house</string>
    <string name="create_button">Create new house</string>
    <string name="map_button">Map</string>
    <string name="loan_button">Make a loan simulation</string>
    <string name="main_activity_loanButton_tooltip">Click this button to launch the loan simulator</string>
    <string name="main_activity_searchButton_tooltip">Click this button to launch the search engine</string>
    <string name="main_activity_createButton_tooltip">Click this button to create a new real estate</string>
    <string name="main_activity_mapButton_tooltip">Click this button to launch the global map with all real estates</string>

    <!-- Loan simulation activity -->
    <string name="title_loan_simulation">Loan simulation</string>
    <string name="interest_rate">Interest rate :</string>
    <string name="repayment_period">Repayment period :</string>
    <string name="amount">Amount of the loan :</string>
    <string name="monthly_payment">Monthly paiement :</string>
    <string name="years">years</string>
    <string name="currency_per_month">$/month</string>

    <!-- Search activity -->
    <string name="title_search">Search for a real estate</string>
    <string name="estate_type">Real estate type</string>
    <string name="radioGroup_realEstateType_appartment">apartment</string>
    <string name="radioGroup_realEstateType_house">house</string>
    <string name="radioGroup_realEstateType_duplex">duplex</string>
    <string name="radioGroup_realEstateType_penthouse">penthouse</string>
    <string name="nearby_services">Nearby services</string>
    <string name="radioGroup_nearbyServices_school">school</string>
    <string name="checkbox_nearbyServices_all">all</string>
    <string name="checkbox_nearbyServices_hospital">hospital</string>
    <string name="checkbox_nearbyServices_shops">shops</string>
    <string name="checkbox_nearbyServices_park">park</string>
    <string name="checkbox_nearbyServices_school">school</string>
    <string name="radioGroup_status_sold">sold</string>
    <string name="radioGroup_status_forSale">for sale</string>
    <string name="radioGroup_status_all">all</string>
    <string name="status">Real estate status</string>
    <string name="rangeSlider_price">price</string>
    <string name="rangeSlider_size">size</string>
    <string name="rangeSlider_rooms">number of rooms</string>
    <string name="buttonSearch">search</string>
    <string name="buttonReinitialize">reinitialize</string>
    <string name="rooms">rooms</string>
    <string name="size">m²</string>
    <string name="search_status_not_selected">You didn\'t select a real estate status, please do it</string>
    <string name="estate_type_not_selected">You didn\'t select a real estate type, please do it</string>

    <!-- CreateEstate activity -->
    <string name="create_estate_title_create">Create a real estate</string>
    <string name="address_of_estate_number">n°</string>
    <string name="address_of_estate_street">street</string>
    <string name="address_of_estate_postalCode">postal code</string>
    <string name="address_of_estate_city">city</string>
    <string name="description_of_estate">description</string>
    <string name="buttonCreate">create</string>
    <string name="create_estate_number_not_selected">You didn\'t type a valid street number</string>
    <string name="create_estate_street_not_selected">You didn\'t select a street name</string>
    <string name="create_estate_postalCode_not_selected">You didn\'t select a postal code</string>
    <string name="create_estate_city_not_selected">You didn\'t select a city name</string>
    <string name="create_estate_photoText">Photos :</string>
    <string name="create_estate_button_take_photo">Take a photo</string>
    <string name="create_estate_button_gallery">See gallery</string>
    <string name="create_estate_alert_dialog_title">Confirmation</string>
    <string name="create_estate_alert_dialog_message">Do you really want to reset all page ?</string>
    <string name="create_estate_alert_dialog_yes">yes</string>
    <string name="create_estate_alert_dialog_no">no</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonSimulate">Calculate</string>
    <string name="create_estate_photo_not_selected">You need to select at least a photo to create a new real estate</string>
    <string name="create_estate_button_update">Update</string>
    <string name="create_estate_creation">Real estate created successfully</string>
    <string name="create_estate_update">Real estate updated successfully</string>
    <string name="create_estate_title_update">Update a real estate</string>

    <!-- Generic names and other stuff for database purpose -->
    <string name="standard_drawable_uri">android.resource://com.openclassrooms.realestatemanager/drawable/</string>
    <string name="emptyText_recyclerView">There is no real estate corresponding to your criterias</string>
    <string name="create_estate_getPhoto_error">Something went wrong while retrieving your photo</string>
    <string name="create_estate_button_sold">Is this\nreal estate\nsold ?</string>
    <string name="more_details">See more details</string>
    <string name="geocoding_bad_address">Please enter a valid address</string>

</resources>
