<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loan_simulation_motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.openclassrooms.realestatemanager.activities.LoanActivity"
    app:layoutDescription="@xml/activity_loan_simulation_scene">


    <LinearLayout
        android:id="@+id/header_loan_simulation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rem_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/top_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rem_icon_partial"
            android:fontFamily="@font/im_fell_english_sc"
            android:paddingTop="16dp"
            android:text="@string/title_loan_simulation"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/type_of_estate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/im_fell_english_sc"
                android:text="@string/amount"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:stepSize="20000"
                android:valueFrom="0"
                android:valueTo="3000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_of_estate" />

            <TextView
                android:id="@+id/nearby_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/im_fell_english_sc"
                android:text="@string/repayment_period"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_loan" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:stepSize="1"
                android:valueFrom="3"
                android:valueTo="25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nearby_services" />

            <TextView
                android:id="@+id/interest_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/im_fell_english_sc"
                android:text="@string/interest_rate"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_period" />

            <EditText
                android:id="@+id/interest_rate_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interest_rate_text" />

            <TextView
                android:id="@+id/monthly_payment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/im_fell_english_sc"
                android:text="@string/monthly_payment"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interest_rate_editText" />

            <TextView
                android:id="@+id/monthly_payment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthly_payment_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/loan_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:alpha="0"
        android:background="@drawable/rem_loan"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/rem_icon_bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_scrolling_view" />

    <HorizontalScrollView
        android:id="@+id/bottom_scrolling_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/layout_scrolling_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison5" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maison7" />

        </LinearLayout>

    </HorizontalScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>
